// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout|Arrangement Inlining elements 1`] = `
<div
  className="css-6s6wkd"
>
  <div
    className="css-1qxtczr"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="css-137oz10"
    >
      full width row 1
    </div>
    <div
      className="css-137oz10"
    >
      full width row 2
    </div>
    <div
      className="css-137oz10"
    >
      full width row 3
    </div>
    <div
      className="css-137oz10"
    >
      full width row 4
    </div>
    <div
      className="css-137oz10"
    >
      full width row 5
    </div>
    <div
      className="css-137oz10"
    >
      full width row 6
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Arrangement Stacking elements 1`] = `
<div
  className="css-6s6wkd"
>
  <div
    className="css-aho8x0"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="css-137oz10"
    >
      full width row 1
    </div>
    <div
      className="css-137oz10"
    >
      full width row 2
    </div>
    <div
      className="css-137oz10"
    >
      full width row 3
    </div>
    <div
      className="css-137oz10"
    >
      full width row 4
    </div>
    <div
      className="css-137oz10"
    >
      full width row 5
    </div>
    <div
      className="css-137oz10"
    >
      full width row 6
    </div>
  </div>
</div>
`;
